--- a/WebContent/crm/221.html
+++ b/WebContent/crm/221.html
@@ -123,7 +123,7 @@
           <div class="box-body">
           	<div class="col-sm-12">
           		<h4><b>211统计范围：<span>96店</span></b></h4>
-              	<small>产品范围：商品类+服装类+团购</small>
+              	<small>产品范围：商品类+服务类+团购</small>
           	</div>
           	<div class="col-sm-6">
               <h5 style="color: #7c4139;">整体完成情况</h5>
