--- a/WebContent/crm/221_bussiness.html
+++ b/WebContent/crm/221_bussiness.html
@@ -258,7 +258,7 @@
   //221商品类服务类团购占比
   option1 = {
     title: [ {    	
-      text: '221商品类服务类团购占比（万元）',
+      text: '221GMV业务分布',
       left: 'center',
       textStyle: {
         color: '#666'
@@ -269,7 +269,7 @@
       formatter: "{a} <br/>{b} : {c} ({d}%)"
     },
     series: [{
-      name: '产品占比',
+      name: '产品占比（单位万元）',
       type: 'pie',
       radius: '80%',
       center: ['50%', '50%'],
@@ -318,7 +318,7 @@
   var unBusiData = [];
   option2 = {
     title: [ {    	
-      text: '非221事业群占比（万元）',
+      text: '非221GMV业务分布',
       left: 'center',
       textStyle: {
         color: '#666'
@@ -329,7 +329,7 @@
       formatter: "{a} <br/>{b} : {c} ({d}%)"
     },
     series: [{
-      name: '产品占比',
+      name: '产品占比（单位万元）',
       type: 'pie',
       radius: '80%',
       center: ['50%', '50%'],
