--- a/WebContent/crm/221_store.html
+++ b/WebContent/crm/221_store.html
@@ -111,7 +111,7 @@
 		height:32px;
 		color: #fff;
 	}
-    
+    table{color:#000}
   </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -188,7 +188,7 @@
                   	<input id="store_id_manual" name="store_id_manual" type="hidden" bidTableFlag="true" value=""/>
                     <input class="input" placeholder="选择门店" type="text" name="key" id="store_name_manual">
                     <span class="search_ico"><i class="fa fa-search"></i></span>
-                  	<div id="auto" style="width: 94%;z-index: 9999999999;">
+                  	<div id="auto" style="width: 94%;z-index: 9999999999;"></div>
                   </form>
                 </div>
               </div>
