--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -1344,6 +1344,16 @@ Date.prototype.format=function(fmt) {
 							infoStr= infoStr
 								+"<span style=\"background:url('../data_access/imgmouse_files/20180615171805.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">积分订单</span>";
 						}
+						if(jData[i].order_tag2=='1'){
+							infoStr= infoStr
+								+"<span style=\"background:url('../data_access/imgmouse_files/20180719094020.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">商品类订单</span>";
+						}else if(jData[i].order_tag2=='2'){
+							infoStr= infoStr
+								+"<span style=\"background:url('../data_access/imgmouse_files/20180719094027.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">服务类订单</span>";
+						}else if(jData[i].order_tag2=='3'){
+							infoStr= infoStr
+								+"<span style=\"background:url('../data_access/imgmouse_files/20180719093956.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">团购订单</span>";
+					}
 						infoStr= infoStr
 	                       	+"</td>"
 	                       	+"</tr>";
