安心合作社

--- a/WebContent/crm/221.html
+++ b/WebContent/crm/221.html
@@ -264,6 +264,7 @@
 <script src="bootstrap/js/raphael-min.js"></script>
 <script src="plugins/morris/morris.min.js"></script>
 <script src="plugins/gooey_menu/gooey.min.js"></script>
+<script src="dist/js/base64.js"/>
 <script type ="text/javascript">
 
   Date.prototype.format = function() {  
@@ -285,7 +286,10 @@
   
   function loginShow(){
 	if(screenlogin!=null&&screenlogin!=''&&screenlogin!=undefined){
-		var reObj = new PMSRequestObject("userManager", "isScreenUser", [ screenlogin ]);
+		var b = new Base64();
+		screenlogin=b.decode(screenlogin);
+		var obj=JSON.parse(screenlogin);
+		var reObj = new PMSRequestObject("userManager", "isAppScreenUser", [obj.code,obj.employeeId,obj.password]);
 	    var callback = function callback(data, textStatus, XMLHttpRequest) {
 	    	var stateObject = {};
 	    	var newUrl = "/daqWeb/crm/221.html?ta=0";
