--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -158,6 +158,7 @@
         <div class="box box-default">
           <div class="box-header h4 text-light-blue">
           	<div class="pull-left "><strong>合作社社员统计</strong></div>
+          	<div class="pull-left text-red" style="padding-left:15px;font-size:75%">（统计数据每10分钟更新一次）</div>
           </div>
           <div class="box-body">
             <form id="searchform" class="clearfix">
@@ -237,7 +238,7 @@
 	                      <th width="12%">
 	                      	新增社员数
 	                      	<font id="showattention" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-                  			<font id="attention" style="font-size: 12px;white-space: nowrap;position: absolute;top:-5px;z-index: 1000;display:none;left:40px">包含畅购卡升级和199</font>		 
+                  			<font id="attention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:40px">包含畅购卡升级和199开卡</font>		 
 	                      </th>
 	                      <th width="12%">199新增开卡数</th>
 	                      <th width="12%">累计社员总数</th>
