--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -1763,7 +1763,7 @@
 <script src="dist/js/utils/htmlToPdf/html2canvas.js"></script>
 <script src="dist/js/utils/htmlToPdf/jspdf.debug.js"></script>
 <script type="text/javascript" src="../scripts/bidLibjsjquery3.0.js"></script>
-
+<script src="dist/js/base64.js"/>
 <script src="dist/js/weekly.js"></script>
 
 <script>
