修改引用js文件

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -284,7 +284,7 @@
 <script type="text/javascript" src="plugins/daterangepicker/daterangepicker.js"></script>
 <script type="text/javascript" src="../scripts/bidLibjsjquery3.0.js"></script>
 <script type="text/javascript" src="../scripts/auto.js"></script>
-<script src="dist/js/base64.js"/>
+<script src="dist/js/base64.js"></script>
 <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
 <!-- 总部首页 script -->
 <!-- <script src="dist/js/headquarters/index_K.js"></script> -->
