--- a/WebContent/crm/221.html
+++ b/WebContent/crm/221.html
@@ -264,7 +264,7 @@
 <script src="bootstrap/js/raphael-min.js"></script>
 <script src="plugins/morris/morris.min.js"></script>
 <script src="plugins/gooey_menu/gooey.min.js"></script>
-<script src="dist/js/base64.js"/>
+<script src="dist/js/base64.js"></script>
 <script type ="text/javascript">
 
   Date.prototype.format = function() {  
@@ -782,8 +782,8 @@
       de.setUTCFullYear(ae[0], ae[1] - 1, ae[2]);  
       var unixDb = db.getTime();  
       var unixDe = de.getTime();  
-      for (var k = unixDb; k <= unixDe;) {  
-          result.push((new Date(parseInt(k))));
+      for (var k = unixDb; k <= unixDe;) {
+    	 result.push((new Date(parseInt(k))).format());
           k = k + 24 * 60 * 60 * 1000;  
       };  
       return result;
