--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -483,7 +483,7 @@
 <script src="dist/js/nav-scroll.js"></script>
 <script src="dist/js/demo.js"></script>
 <script src="dist/js/nav-scroll.js"></script>
-    <script src="dist/js/base64.js"></script>
+<script src="dist/js/base64.js"></script>
 <script src="plugins/gooey_menu/gooey.min.js"></script>
 <script>
 var target = decode64(getUrlParamByKey("t"));//target 0：总部  1:城市级别 2：门店
@@ -508,8 +508,8 @@ function showAddMember(){
         $("#cityMember").show();
     });
     $(".add_citymember").mouseleave(function(){
-    	/* $("#setadd").val("0");
-        $("#cityMember").hide(); */
+    	$("#setadd").val("0");
+        $("#cityMember").hide();
     });
 }
 function doCityMem(citycode){
