修改线上人员查询

--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -310,6 +310,12 @@
             <div><span class="alert-warning">专员（综合管理，副店长）</span></div>
             <div class="col-sm-6" id="mainzongguan" style="height: 300px;"></div>
             <div class="col-sm-6" id="mainempzongguan" style="height: 300px;"></div>
+            <div><span class="alert-warning">线上人员</span></div>
+            <div class="col-sm-6" id="mainzongbu" style="height: 300px;"></div>
+            <div class="col-sm-6" id="mainempzongbu" style="height: 300px;"></div>
+           <!--  <div><span class="alert-warning">线上人员（城市公司）</span></div>
+            <div class="col-sm-6" id="maingongsi" style="height: 300px;"></div>
+            <div class="col-sm-6" id="mainempgongsi" style="height: 300px;"></div> -->
             <!-- <div id="main8" style="height: 350px;"></div> -->
             <div class="col-sm-12" style="display:none;">
               <table class="table table-bordered" id="weekcount">
