注释最受欢迎,无人问津商品

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -360,7 +360,7 @@
                   </div>
               </div>
           </div>
-          <div class="box box-default">
+<!--           <div class="box box-default">
               <div class="box-body">
                   <div class="col-sm-6">
                       <h4 class="text-red">最受欢迎商品</h4>
@@ -369,7 +369,7 @@
                           <tr>
                               <th>商品名称</th>
                               <th>卖出数量</th>
-                              <!-- <th>售卖时长</th> -->
+                              <th>售卖时长</th>
                               <th>排名</th>
                           </tr>
                           </tbody>
@@ -382,14 +382,14 @@
                           <tr>
                               <th>商品名称</th>
                               <th>卖出数量</th>
-                              <!-- <th>售卖时长</th> -->
+                              <th>售卖时长</th>
                               <th>排名</th>
                           </tr>
                           </tbody>
                       </table>
                   </div>
               </div>
-          </div>
+          </div> -->
           <div class="box box-default">
               <div class="box-body">
                   <div class="col-sm-7 no-padding">
@@ -1358,7 +1358,7 @@ function doMemberSum(){
         	//城市注册排名
         	showCityMember(resultJson);
         	//最受欢迎商品、无人问津商品
-        	showProduct(resultJson);
+        	//showProduct(resultJson);
         	//E店情况
         	showEshop(resultJson);
 
